--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -62,6 +62,9 @@
     "\n",
     "The first method we will study is called Bug 1.  Unlike the case of a maze, in planning we know which direction we would need to take to reach the goal.  So, Bug 1 proceeds as follows:\n",
     "\n",
+    "*************\n",
+    "<a name=\"alg:Bug1\">**Algorithm Bug 1**</a>\n",
+    "\n",
     "1. Move in a straight line path toward $G$.\n",
     "\n",
     "2. If the robot reaches $G$, we are done.  \n",
@@ -69,6 +72,7 @@
     "3. If the robot hits an obstacle, then follow the right-hand rule and traverse its boundary \n",
     "\n",
     "4. This continues until the wall no longer is pointing against the straight line from $X$ toward $G$.  Once this occurs, continue from Step 1.\n",
+    "**************\n",
     "\n",
     "It is important to note that in Step 4, this determination is done only locally.  It does not examine the overall shape of the obstacle to see if the straight line does not overlap the obstacle, only locally whether taking the direction $G-X$ leads the robot into free space. \n",
     "\n",
@@ -86,6 +90,8 @@
     "\n",
     "The second method is called Bug 2, and is a little more complex.  Here, we shall add some memory to the robot.\n",
     "\n",
+    "*************\n",
+    "<a name=\"alg:Bug2\">**Algorithm Bug 2**</a>\n",
     "1. Move in a straight line path toward $G$. \n",
     "\n",
     "2. If the robot reaches $G$, we are done.  \n",
@@ -95,13 +101,16 @@
     "4. If the robot crosses the line $\\overline{PG}$ as it walks along the wall, determine whether $\\| X-G \\| < \\|P-G\\|$ and the wall is not pointing against the straight line from $X$ toward $G$.  If both conditions are satisfied, continue from step 1.  Otherwise, keep walking.\n",
     "\n",
     "5. If $P$ is reached again, return \"No path\"\n",
+    "*************\n",
+    "\n",
+    "Fig. 2 shows how this algorithm works.\n",
     "\n",
     "*************\n",
     "\n",
     "![fig:Bug2](figures/planning/bug2.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:Bug2\">Figure 2</a>.\n",
-    "    The Bug 2 algorithm that remembers the line from the start to the\n",
+    "    The Bug 2 algorithm remembers the line from the start to the\n",
     "goal, and circumnavigates an obstacle until it meets the line again at a\n",
     "closer point to the goal.\n",
     "</div>\n",
@@ -962,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
