--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -305,29 +305,40 @@
     "tasks like motion prediction, collision detection, or rendering.\n",
     "\n",
     "We shall only describe forward kinematics for serial and articulated\n",
-    "robots; methods for parallel robots will be covered in the next chapter.\n",
-    "\n",
+    "robots; methods for parallel robots will be covered in the next chapter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2D forward kinematics for a serial robot\n",
     "\n",
     "First, let us derive the forward kinematics for an $n$R serial robot.\n",
     "There are $n$ links $l_1,\\ldots,l_n$, with the 1st link attached to the\n",
     "world by a revolute joint, and the remaining $n-1$ links attached to the\n",
     "prior link by a revolute joint. Assume that at the 0 position, the\n",
-    "links' coordinate frames are defined by their reference transforms to\n",
-    "the world coordinate system: $$T_1^{ref}, T_2^{ref},\\ldots, T_n^{ref}.$$\n",
+    "links' coordinate frames are defined by their reference transforms:\n",
+    "$$T_{1,ref}, T_{2,ref},\\ldots, T_{n,ref}$$\n",
+    "each expressed as relative to the world coordinate system.\n",
     "To make notation more convenient we shall represent these by $3\\times 3$\n",
     "matrices in homogeneous coordinates. We shall also assume that each\n",
     "joint $j_1,\\ldots,j_n$ is placed at the origin of the frame of $l_i$,\n",
     "and each joint angle $q_i$ gives the angle of link $l_i$ *relative* to\n",
-    "its parent link, not in absolute heading.\n",
-    "\n",
+    "its parent link, not in absolute heading."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Deriving the general-purpose formula\n",
     "\n",
-    "When the first joint rotates by angle $q_1$, the frame of the first link $T_1(q_1)$ is changed. $T_1(q_1)$ can be derived by observing how a point $X$ attached to $l_i$ would be moved. Let $\\mathbf{x}_1$ be the coordinates of this point relative to the link's frame (augmented with a 1, in homogeneous coordinates).\n",
+    "When the first joint rotates by angle $q_1$, the frame of the first link $T_1(q_1)$ is changed. $T_1(q_1)$ can be derived by observing how a point $X$ attached to $l_i$ would be moved. Let $\\mathbf{x}^1$ be the coordinates of this point relative to the link's frame (augmented with a 1, in homogeneous coordinates).\n",
     "\n",
-    "First, observe that relative to $l_1$'s reference frame, $X$ has coordinates $R(q_1)\\mathbf{x}_1$ because the link was rotated about the origin:\n",
-    "$$\\mathbf{x}_1^{ref} = R(q_{1}) \\mathbf{x}_{1} = \\begin{bmatrix} {\\cos q_1} & {-\\sin q_1} & {0} \\\\ {\\sin q_1} & {\\cos q_1} & {0} \\\\ 0 & 0 & 1 \n",
-    "\\end{bmatrix}.$$\n"
+    "First, observe that relative to $l_1$'s reference frame, $X$ has coordinates $R(q_1)\\mathbf{x}^1$ because the link was rotated about the origin:\n",
+    "$$\\mathbf{x}^{1,ref} = R(q_{1}) \\mathbf{x}^{1} = \\begin{bmatrix} {\\cos q_1} & {-\\sin q_1} & {0} \\\\ {\\sin q_1} & {\\cos q_1} & {0} \\\\ 0 & 0 & 1 \n",
+    "\\end{bmatrix} \\mathbf{x}^{1}.$$"
    ]
   },
   {
@@ -336,56 +347,61 @@
    "source": [
     "\n",
     "Next, we can convert coordinates in $l_1$'s\n",
-    "reference frame to the world via multiplication by $T_1^{ref}$ to obtain\n",
-    "the final value of $X$'s world coordinates, $\\mathbf{x}_W$:\n",
-    "$$\\mathbf{x}_W = T_1^{ref} R(q_1) \\mathbf{x}_1.$$ We can now define\n",
-    "$T_1(q_1) \\equiv T_1^{ref} R(q_1)$ as the frame of link 1.\n",
+    "reference frame to the world via multiplication by $T_{1,ref}$ to obtain\n",
+    "the final value of $X$'s world coordinates, $\\mathbf{x}^W$:\n",
+    "$$\\mathbf{x}^W = T_{1,ref} R(q_1) \\mathbf{x}^1.$$ We can now define\n",
+    "$T_1(q_1) \\equiv T_{1,ref} R(q_1)$ as the frame of link 1.\n",
     "\n",
     "Let us proceed to link 2, which moves in space as a function of both\n",
     "$q_1$ and $q_2$. Imagine $X$ now be a point attached to link 2, and let\n",
-    "$\\mathbf{x}_2$ be its coordinates with respect to the link's frame. Due to\n",
+    "$\\mathbf{x}^2$ be its coordinates with respect to the link's frame. Due to\n",
     "the serial nature of the chain, we can imagine first rotating link 2 by\n",
     "angle $q_2$ and then rotating link 1 by angle $q_1$. To perform this\n",
     "operation, let us proceed with the following order of transformations:\n",
     "\n",
     "1.  Rotate link 2, i.e, converts from link 2's moved frame to link 2's\n",
-    "    reference frame: $\\mathbf{x}_2 \\rightarrow \\mathbf{x}_2^{ref}$,\n",
+    "    reference frame: $\\mathbf{x}^2 \\rightarrow \\mathbf{x}^{2,ref}$,\n",
     "\n",
     "2.  Change coordinates to link 1, i.e., convert from link 2's reference\n",
-    "    frame to link 1's moved frame: $\\mathbf{x}_2^{ref} \\rightarrow \\mathbf{x}_1$,\n",
+    "    frame to link 1's moved frame: $\\mathbf{x}^{2,ref} \\rightarrow \\mathbf{x}^1$,\n",
     "\n",
     "3.  Apply link 1's transform, i.e., rotate link 1 and perform the change\n",
-    "    of coordinates to the world frame: $V{x}_1 \\rightarrow V{x}_W$.\n",
+    "    of coordinates to the world frame: $\\mathbf{x}^1 \\rightarrow \\mathbf{x}^W$.\n",
     "\n",
     "As before the first transform consists of a rotation about the origin:\n",
-    "$$\\mathbf{x}_2^{ref} = R(q_2) \\mathbf{x}_2.$$ Next, we convert to link 1's\n",
+    "$$\\mathbf{x}^{2,ref} = R(q_2) \\mathbf{x}^2.$$ Next, we convert to link 1's\n",
     "coordinates. Note that those coordinates will be the same whether link 1\n",
     "is rotated or not, since the entire substructure after link 1 rotates in\n",
     "unison. As a result we can perform this change of coordinates at the\n",
     "reference configuration, which yields the following formula:\n",
-    "$$\\mathbf{x}_1 = (T_1^{ref})^{-1} T_2^{ref} \\mathbf{x}_2^{ref}$$ which first\n",
+    "$$\\mathbf{x}^1 = (T_{1,ref})^{-1} T_{2,ref} \\mathbf{x}^{2,ref}$$ which first\n",
     "changes from $T_2$'s reference frame to the world, then back to $T_1$'s\n",
     "reference frame.\n",
     "\n",
     "Finally, the third step is simply an application of $T_1(q_1)$ as\n",
-    "before: $$\\mathbf{x}_W = T_1(q_1) \\mathbf{x}_1.$$ Putting this all together, we\n",
+    "before: $$\\mathbf{x}^W = T_1(q_1) \\mathbf{x}^1.$$ Putting this all together, we\n",
     "obtain the equation:\n",
-    "$$\\mathbf{x}_W = T_1(q_1) (T_1^{ref})^{-1} T_2^{ref} R(q_2) \\mathbf{x}_2 = T_2(q_1,q_2) \\mathbf{x}_2$$\n",
-    "where $T_2(q_1,q_2) = T_1(q_1) (T_1^{ref})^{-1} T_2^{ref} R(q_2)$.\n",
+    "$$\\mathbf{x}^W = T_1(q_1) (T_{1,ref})^{-1} T_{2,ref} R(q_2) \\mathbf{x}^2 = T_2(q_1,q_2) \\mathbf{x}^2$$\n",
+    "where $T_2(q_1,q_2) = T_1(q_1) (T_{1,ref})^{-1} T_{2,ref} R(q_2)$.\n",
     "\n",
     "Repeating this step down the chain, we find the following recursive\n",
     "equation holds for $i > 1$:\n",
-    "$$T_{i}(q_1,\\ldots,q_i) = T_{i-1}(q_1,\\ldots,q_{i-1}) (T_{i-1}^{ref})^{-1} T_i^{ref} R(q_i).$$\n",
-    "This can be simplified further by assuming the reference *parent\n",
+    "$$T_{i}(q_1,\\ldots,q_i) = T_{i-1}(q_1,\\ldots,q_{i-1}) (T_{i-1,ref})^{-1} T_{i,ref} R(q_i).$$\n",
+    "This can be simplified further by assuming the *reference parent\n",
     "transforms* are given by the relative transforms\n",
-    "$T_{i\\rightarrow i-1}^{ref} \\equiv (T_{i-1}^{ref})^{-1} T_i^{ref}$. The\n",
+    "$T_{i,ref}^{i-1,ref} \\equiv (T_{i-1,ref})^{-1} T_{i,ref}$. Then, the\n",
     "simplified equation is:\n",
-    "$$T_{i}(q) = T_{i-1}(q) T_{i\\rightarrow i-1}^{ref} R(q_i).\n",
+    "$$T_{i}(q) = T_{i-1}(q) T_{i,ref}^{i-1,ref} R(q_i).\n",
     "\\label{eq:RecursiveForwardKinematics}$$ Reading this equation from right\n",
     "to left, the three steps described above become clear: 1) rotate about\n",
     "the joint, 2) convert to the coordinates of the parent link, 3)\n",
-    "transform by the parent's transform.\n",
-    "\n",
+    "transform by the parent's transform."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Canonical examples\n",
     "\n",
     "Let us now work out an example analytically. By judiciously choosing\n",
@@ -400,7 +416,7 @@
     "\n",
     "With this convention, we have the reference transforms given by:\n",
     "\n",
-    "$$T_{i\\rightarrow i-1}^{ref} = \\begin{bmatrix}\n",
+    "$$T_{i,ref}^{i-1,ref} = \\begin{bmatrix}\n",
     "1 & 0 & L_{i-1} \\\\\n",
     "0 & 1 & 0 \\\\\n",
     "0 & 0 & 1 \n",
@@ -487,11 +503,16 @@
     "The modification to\n",
     "($\\ref{eq:RecursiveForwardKinematics}$) is simple. Rather than using\n",
     "the prior index in the recursive formula, we use the parent index:\n",
-    "$$T_{i}(q) = T_{p[i]}(q) T_{i\\rightarrow p[i]}^{ref} R(q_i)\n",
+    "$$T_{i}(q) = T_{p[i]}(q) T_{i,ref}^{p[i],ref} R(q_i)\n",
     "\\label{eq:RecursiveForwardKinematicsBranched}$$ if $p[i] \\neq W$ and\n",
-    "$$T_{i}(q) = T_{i}^{ref} R(q_i)\n",
-    "\\label{eq:RecursiveForwardKinematicsBase}$$ otherwise.\n",
-    "\n",
+    "$$T_{i}(q) = T_{i,ref} R(q_i)\n",
+    "\\label{eq:RecursiveForwardKinematicsBase}$$ otherwise.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Handling 2D prismatic joints\n",
     "\n",
     "To handle prismatic joints in 2D, we must modify the forward kinematics\n",
@@ -548,7 +569,7 @@
     "\n",
     "-   The parent index $p[i]$.\n",
     "\n",
-    "-   The reference transform $T_{i\\rightarrow p[i]}^{ref}$\n",
+    "-   The reference transform $T_{i,ref}^{p[i],ref}$\n",
     "\n",
     "-   An indicator variable $z_i$ which is 1 if the joint is revolute, and\n",
     "    0 if the joint is prismatic.\n",
@@ -557,7 +578,7 @@
     "    (Ignored for revolute joints.)\n",
     "\n",
     "Then, the forward kinematics are defined by:\n",
-    "$$T_{i}(q) = T_{p[i]}(q) T_{i\\rightarrow p[i]}^{ref} L_{z_i,\\mathbf{a}_i}(q_i)\n",
+    "$$T_{i}(q) = T_{p[i]}(q) T_{i,ref}^{p[i],ref} L_{z_i,\\mathbf{a}_i}(q_i)\n",
     "\\label{eq:RecursiveForwardKinematicsGeneralized}$$ where $T_{W}(q)$ is\n",
     "the identity and $L_{z_i,\\mathbf{a}_i}(q_i)$ is the local joint transform\n",
     "$$L_{z,\\mathbf{a}}(q) = \n",
@@ -593,8 +614,13 @@
     "0 & 0 & 0 & 1\n",
     "\\end{array}\\right].$$ (This *block matrix* representation indicates that\n",
     "the upper-left $3\\times 3$ matrix is replaced by the rotation matrix\n",
-    "derived from the axis-angle parameterization $R_{aa}$.)\n",
-    "\n",
+    "derived from the axis-angle parameterization $R_{aa}$.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Examples \n",
     "\n",
     "Consider a 2RP spherical manipulator whose first axis rotates about the\n",
@@ -617,7 +643,7 @@
     "\n",
     "******************\n",
     "\n",
-    "With this definition, $T_{i\\rightarrow p[i]}^{ref} = I$ for each link.\n",
+    "With this definition, $T_{i,ref}^{p[i],ref} = I$ for each link.\n",
     "So, the transform of the third link is given by $$T_3(q) = \n",
     "\\left[\\begin{array}{ccc|c}\n",
     "  &          &   & 0 \\\\\n",
@@ -694,14 +720,19 @@
     "the $(z,x)$ plane, not the $(x,z)$ plane. To change the interpretation\n",
     "so that $q_2$ measures the elevation angle, the second axis of rotation\n",
     "could be rotated so that $\\mathbf{a}_2 = (0,-1,0)$, or equivalently, that the\n",
-    "reference transform $T_2^{ref}$ rotates $\\pi$ radians about either the\n",
-    "$x$ or $z$ axis.\n",
-    "\n",
+    "reference transform $T_{2,ref}$ rotates $\\pi$ radians about either the\n",
+    "$x$ or $z$ axis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Kinematics conventions\n",
     "\n",
     "As we defined the layout of a robot's kinematic structure above, we\n",
     "store the following parameters for each link $i=1,\\ldots,n$: parents\n",
-    "$p[i]$, reference relative transforms $T_{i\\rightarrow p[i]}^{ref}$,\n",
+    "$p[i]$, reference relative transforms $T_{i,ref}^{p[i],ref}$,\n",
     "joint types $z_i$, and translational or rotational axes $\\mathbf{a}_i$ .\n",
     "\n",
     "However, our 2RP example showed that there are multiple choices of\n",
@@ -715,8 +746,13 @@
     "robot's reference frame by choosing a *convention*. We have already seen\n",
     "a convention where we have chosen to place joint axes at the origin of\n",
     "the child frame; in general, the joint could have been placed\n",
-    "arbitrarily in space.\n",
-    "\n",
+    "arbitrarily in space."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Planar robot convention\n",
     "\n",
     "We have also seen the standard convention for 2D planar robots in the\n",
@@ -733,8 +769,13 @@
     "\n",
     "As a result, a minimum set of kinematic parameters for a 2D robot are\n",
     "the link lengths $L_1,\\ldots,L_n$ and the headings of any translational\n",
-    "axes $\\theta_i$.\n",
-    "\n",
+    "axes $\\theta_i$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Denavit-Hartenberg convention\n",
     "\n",
     "*Denavit-Hartenberg convention* is a well-known minimal parameter\n",
@@ -745,8 +786,13 @@
     "the purposes of robot design and forward kinematics calculations, but\n",
     "due to the minimal number of parameters used (4 per link) it remains\n",
     "popular for robot structure optimization problems, like in robot\n",
-    "calibration.\n",
-    "\n",
+    "calibration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### A single-pass forward kinematics algorithm\n",
     "\n",
     "Forward kinematics can be computed through a single pass through the\n",
@@ -780,8 +826,13 @@
     "*************\n",
     "\n",
     "After the algorithm is complete, all link frames $T_1,\\ldots,T_N$ are calculated with\n",
-    "respect to the world frame.\n",
-    "\n",
+    "respect to the world frame."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Robot kinematic definition files\n",
     "\n",
     "Although deriving a closed-form symbolic expression for forward\n",
@@ -4290,7 +4341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
